test/files/neg/t2458b.check
A.scala:6: error: type mismatch;
 found   : scala.collection.mutable.BitSet
 required: p.BitSet
   val b : BitSet = new scala.collection.mutable.BitSet
                    ^
one error found
